2002-09-15  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	*  x_picdep_load_icon( &data,&pixmap,&mask) is added
	  in gdk-pixbuf module. 

2002-09-15 Araki Ken <arakiken@users.sf.net>

	* If cursor is located at the second byte of a multi-byte character,
	  cursor moves strangely, when bce is enabled. fixed.

2002-09-12 Araki Ken <arakiken@users.sf.net>

	* 2.6.1 released
	  (tag "rel-2_6_1")

2002-09-12 Araki Ken <arakiken@users.sf.net>

	* The right-end column was not drawn correctly under anti-alias mode. fixed.
	  (Thanks to Sato Seiichi san)
	* INCDIR macro was wrong. fixed.
	  (Thanks to Nakada Nobuyoshi asn)

2002-09-08 Araki Ken <arakiken@users.sf.net>

	* Screen of logged lines which contains multi byte characters got corrupt. fixed.
	* Tanween characters were ignored when arabic characters shaped. fixed.
	* Added doc/ja/README.confapp.

2002-09-08 Seiichi SATO <ssato@sh.rim.or.jp>

	* Added mlterm-icon-24colors-[12].png for low color depth.

2002-09-08 Araki Ken <arakiken@users.sf.net>

	* OPEN_PTY and OPEN_SCREEN shortcut keys were confused. fixed.
	* mkf_charset_t variable was passed to usascii_font_cs_changed()
	  in x_screen_attach(). fixed.
	* Added --with-imagelib option to mlterm/configure(.in) and
	  removed --enable-imlib, --enable-gdk-pixbuf.

2002-09-07 Araki Ken <arakiken@users.sf.net>

	* 2.6.0 released
	  (tag "rel-2_6_0")

2002-09-07 Araki Ken <arakiken@users.sf.net>

	* Added --with-imagelib=[imlib,gdk-pixbuf1,gdk-pixbuf2]
	  Removed --enable-imlib, --enable-gdk-pixbuf
	  (Thanks to Sato Seiichi san)
	* USPosition bit is set in XSizeHints.flags.
	  (Minami Hirokazu san)

2002-09-07  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* mlterm.tc is now non-shrinked version.
	  It's more accurate but may not compiled.
	  Please modify it to fit <1K .

2002-09-06  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Added mlterm.ti and  mlterm.tc under doc/term/ .

2002-09-06  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>
