@@ -46,7 +46,6 @@ int  x_picture_load_background( x_picture_t *  pic) ;
 
 int  x_picture_modifier_is_normal( x_picture_modifier_t *  pic_mod) ;
 
-int  x_picture_set_icon_from_file( x_window_ptr_t  win , char *  file_path) ;
-
+int  x_picture_load_icon( x_window_ptr_t win, char * path, u_int32_t **cardinal, Pixmap *pixmap, Pixmap *mask) ;
 
 #endif
