@@ -19,165 +19,21 @@
 
 #include "x_picture_dep.h"
 
-typedef struct icon_cache_tag{
-	Display * display;
-	char * path;
+struct pixmap_store_tag {
+	Display  *display;
 	Pixmap icon;
 	Pixmap mask;
-	CARDINAL * data; 	///< used for _NET_WM_ICON
-	struct icon_cache_tag * next; 
-} icon_cache_t;
+	struct pixmap_store_tag *next;
+} pixmap_store_t;
 
 /* --- static variables --- */
 
 static int display_count = 0;
 static unsigned char gamma_cache[255];
-static icon_cache_t *icon_cache = NULL;
+static struct pixmap_store_t * pixmap_store;
 
 /* --- static functions --- */
-static icon_cache_t *
-icon_cache_add(
-	Display * display,
-	char *path)
-{
-	void *p;
-	icon_cache_t * dest;
-	int i, j;
-	int width, height, rowstride, bytes_per_pixel;
-	unsigned char *line;
-	unsigned char *pixel;
-	GdkPixbuf * pixbuf;
 
-	Pixmap pixmap_return;
-	Pixmap mask_return;
-
-#ifdef  DEBUG
-	kik_warn_printf( KIK_DEBUG_TAG "loading icon form %s .\n", path) ;
-#endif	
-	dest = malloc( sizeof( icon_cache_t));
-	if (!dest)
-		return NULL;
-
-	dest->display = NULL; /* mark as empty for now*/
-
-#ifndef OLD_GDK_PIXBUF
-	pixbuf = gdk_pixbuf_new_from_file( path , NULL );
-#else
-	pixbuf = gdk_pixbuf_new_from_file( path );
-#endif /*OLD_GDK_PIXBUF*/
-	if ( !pixbuf ){
-		free(dest);
-		return NULL;
-	}
-
-/* create CARDINAL array for_NET_WM_ICON data */
-	bytes_per_pixel = gdk_pixbuf_get_has_alpha (pixbuf) ? 4 : 3;
-	width = gdk_pixbuf_get_width (pixbuf);
-	height = gdk_pixbuf_get_height (pixbuf);
-	rowstride = gdk_pixbuf_get_rowstride (pixbuf);
-	line = gdk_pixbuf_get_pixels (pixbuf);
-	
-	dest->data = malloc((width * height + 2) *4);
-	if (!dest->data){
-		gdk_pixbuf_unref(pixbuf);
-		free(dest);
-		return NULL;
-	}
-/* {width, height, ARGB[][]} */
-	dest->data[0] = width;
-	dest->data[1] = height;
-	for (i = 0 ; i < height ; i++) {
-		pixel = line;
-		line += rowstride;
-		
-		for (j = 0 ; j < width ; j++) {
-			if (bytes_per_pixel == 4) /* alpha support (convert to ARGB format)*/
-				dest->data[(i*width+j)+2] = ((((((CARDINAL)(pixel[3]) << 8) + pixel[0]) << 8) + pixel[1]) << 8) + pixel[2];
-			else                      /* completely opaque */
-				dest->data[(i*width+j)+2] = ((((((CARDINAL)(0x0000FF) <<8 ) + pixel[0]) << 8) + pixel[1]) << 8) + pixel[2];
-			pixel += bytes_per_pixel;
-		}
-	}
-
-/* Create Icon pixmap&mask for WMHints. None as result is acceptable.*/
-	gdk_pixbuf_xlib_render_pixmap_and_mask
-		(pixbuf,
-		 &(dest->icon),
-		 &(dest->mask),
-		 127);
-	gdk_pixbuf_unref(pixbuf);
-
-	dest->path = strdup(path);
-
-	if (!dest->path){ /* memory exhausted */
-		XFreePixmap(display, dest->icon);
-		XFreePixmap(display, dest->mask);
-		free(dest->data);
-		free(dest);
-		return NULL;  
-	}
-	dest->display = display;
-	dest->next = icon_cache;
-	icon_cache = dest;
-	return dest;
-}
-
-static icon_cache_t *
-icon_cache_lookup(
-	Display * display,
-	char *path)
-{
-	icon_cache_t *p;
-	
-	p = icon_cache;
-	while(p){
-		if ((p->display == display) && (strcmp(p->path, path) == 0) )
-			return p;
-		p = p->next;
-	}
-	return icon_cache_add(display, path);
-}
-
-
-static int
-icon_cache_remove_display(Display * display){
-	icon_cache_t * p;
-	icon_cache_t * p_prev;
-
-	p_prev = NULL;
-	p = icon_cache;
-
-#ifdef  DEBUG
-	kik_warn_printf( KIK_DEBUG_TAG " freeing display %d.\n", display) ;
-#endif
-	while (p){
-		if (p->display == display){
-			free(p->path);
-			p->data = NULL;
-			free(p->data);
-			p->path = NULL;
-
-			XFreePixmap(p->display, p->icon);
-			XFreePixmap(p->display, p->mask);
-			p->icon = p->mask = None;
-			p->display = NULL;
-			
-			if (p_prev == NULL){ /* head */
-				icon_cache = p->next;
-				free(p);
-				p = icon_cache;
-			}else{
-				p_prev->next = p->next;
-				free(p);
-				p = p_prev->next;
-			}
-		}else{
-			p_prev = p;
-			p = p->next;
-		}	
-	}
-	return 0;
-}
 
 static unsigned char
 modify_gamma(unsigned char value, x_picture_modifier_t *  pic_mod){
@@ -267,7 +123,6 @@ x_picdep_display_opened( Display *  display){
 int
 x_picdep_display_closed( Display *  display){
 	display_count --;
-	icon_cache_remove_display( display); /* clean up pixmaps/cardinals */
 
 	/* XXX
          *
@@ -444,69 +299,61 @@ found:
 }
 
 int x_picdep_load_icon(
-	x_window_t * win,
+	x_window_ptr_t * win,
 	char * path,
 	u_int32_t **cardinal,
 	Pixmap *pixmap,
 	Pixmap *mask)
 {
-	icon_cache_t * icon;
-	icon = icon_cache_lookup(win->display, path);
+	GdkPixbuf * pixbuf;
 
-	if (!icon)
-		icon = icon_cache_add(win->display, path);
-	if (!icon)
+#ifdef  DEBUG
+	kik_warn_printf( KIK_DEBUG_TAG "loading icon form %s .\n", path) ;
+#endif	
+#ifndef OLD_GDK_PIXBUF
+	pixbuf = gdk_pixbuf_new_from_file( path , NULL );
+#else
+	pixbuf = gdk_pixbuf_new_from_file( path );
+#endif /*OLD_GDK_PIXBUF*/
+	if ( !pixbuf )
 		return 0;
 
-	if (cardinal)
-		*cardinal = icon->data;
-	if (pixmap)
-		*pixmap = icon->icon;
-	if (mask)
-		*mask = icon->mask;
-	return 1;
-}
+	if ( cardinal){
+		int width, height, rowstride, bytes_per_pixel;
+		unsigned char *line;
+		unsigned char *pixel;
+		int i, j;
 
-int x_picdep_set_icon_from_file(
-	x_window_t * win,
-	char * file_path
-	)
-{
-	XWMHints *hints;
-	CARDINAL *cardinal;
-	Pixmap pixmap;
-	Pixmap mask;
-
-	if( !file_path || !*file_path)
-		return 0; 
-	x_picdep_load_icon(
-		win,
-		file_path,
-		&cardinal,
-		&pixmap,
-		&mask);
-	
-/* set extended window manager hint's icon */
-	if (cardinal)
-		XChangeProperty ( win->display, win->my_window,
-				  XInternAtom(win->display, "_NET_WM_ICON", False),
-				  XA_CARDINAL, 32,
-				  PropModeReplace,
-				  (unsigned char *)(cardinal), (cardinal[0])*(cardinal[1])+2);
-
-/* set old style window manager hint's icon */		
-	hints = NULL;
-	if (pixmap & mask)
-		hints = XAllocWMHints(); /* can be NULL*/
-	if (!hints)
-		return 0;
-	hints->flags |= IconPixmapHint;
-	hints->flags |= IconMaskHint;
-	hints->icon_mask = mask;
-	hints->icon_pixmap = pixmap;
-	/* old pixmaps are kept in the cache and should be freed later */
-	XSetWMHints(win->display, win->my_window, hints);
-	XFree(hints);
-
+/* create CARDINAL array for_NET_WM_ICON data */
+		bytes_per_pixel = gdk_pixbuf_get_has_alpha (pixbuf) ? 4 : 3;
+		width = gdk_pixbuf_get_width (pixbuf);
+		height = gdk_pixbuf_get_height (pixbuf);
+		rowstride = gdk_pixbuf_get_rowstride (pixbuf);
+		line = gdk_pixbuf_get_pixels (pixbuf);
+		if (*cardinal = malloc((width * height + 2) *4)){
+			
+/* {width, height, ARGB[][]} */
+			(*cardinal)[0] = width;
+			(*cardinal)[1] = height;
+			for (i = 0 ; i < height ; i++) {
+				pixel = line;
+				line += rowstride;
+				
+				for (j = 0 ; j < width ; j++) {
+					if (bytes_per_pixel == 4) /* alpha support (convert to ARGB format)*/
+						(*cardinal)[(i*width+j)+2] = ((((((CARDINAL)(pixel[3]) << 8) + pixel[0]) << 8) + pixel[1]) << 8) + pixel[2];
+					else                      /* completely opaque */
+						(*cardinal)[(i*width+j)+2] = ((((((CARDINAL)(0x0000FF) <<8 ) + pixel[0]) << 8) + pixel[1]) << 8) + pixel[2];
+					pixel += bytes_per_pixel;
+				}
+			}
+		}
+		
+	}
+/* Create Icon pixmap&mask for WMHints. None as result is acceptable.*/
+	if (pixmap || mask)
+		gdk_pixbuf_xlib_render_pixmap_and_mask( pixbuf, pixmap, mask, 127);
+	gdk_pixbuf_unref(pixbuf);
+	    
 	return 1;
 }
